editors/tree-sitter-emod/test/corpus/aggregate.txt
========================
Empty aggregate definition
========================

context "C" {
  aggregate "Item" {}
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string))))
