editors/tree-sitter-emod/test/corpus/context.txt
========================
Empty context definition
========================

context "Inventory" {}

---

(source_file
  (context_definition
    (string)))

========================
Context with aggregate
========================

context "Inventory" {
  aggregate "Item" {}
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string))))

========================
Context with an invariant of its own
========================

context "Reading Room" {
  invariant OneReaderPerDesk "A desk seats at most one reader at any moment"
}

---

(source_file
  (context_definition
    (string)
    (invariant
      (any_identifier)
      (string))))
