editors/tree-sitter-emod/test/corpus/slice.txt
========================
Empty slice definition
========================

context "C" {
  aggregate "A" {
    slice "Core" {}
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)))))

========================
Slice with command
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      command PlaceOrder {}
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (command_definition
          (identifier))))))

========================
Slice with event
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      event OrderPlaced {}
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (event_definition
          (identifier))))))

========================
Slice with flow
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      flow {
        command -> event: PlaceOrder -> OrderPlaced
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (flow_definition
          (identifier)
          (identifier))))))

========================
Slice with trigger
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      trigger OnOrder "ERP" {}
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (trigger_definition
          (identifier)
          (string))))))

========================
Slice with fields
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      fields {
        Name string
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (fields_block
          (field_line
            (any_identifier)
            (any_identifier)))))))

========================
Slice with command and fields block
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      command ReserveRoom {
        fields {
          roomId string required
        }
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (command_definition
          (identifier)
          (fields_block
            (field_line
              (any_identifier)
              (any_identifier)
              (any_identifier))))))))

========================
Slice with event and source external
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      event OrderPlaced {
        fields {
          orderId string
        }
        source external "Kafka"
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (event_definition
          (identifier)
          (fields_block
            (field_line
              (any_identifier)
              (any_identifier)))
          (string))))))

========================
Slice with view, fields, and subscribes
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      view ActiveOrders {
        fields {
          orderId string required
          status string required
        }
        subscribes [OrderPlaced, OrderCancelled]
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (view_definition
          (identifier)
          (fields_block
            (field_line
              (any_identifier)
              (any_identifier)
              (any_identifier))
            (field_line
              (any_identifier)
              (any_identifier)
              (any_identifier)))
          (subscribes_block
            (any_identifier)
            (any_identifier)))))))

========================
Slice with automation
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      automation SendEmail {
        on OrderPlaced
        command SendConfirmation
        target context Notifications
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (automation_definition
          (identifier)
          (any_identifier)
          (any_identifier)
          (any_identifier))))))

========================
Slice with automation declaring reads first
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      automation SendEmail {
        reads AvailableRoomsView
        on OrderPlaced
        command SendConfirmation
        target context Notifications
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (automation_definition
          (identifier)
          (any_identifier)
          (any_identifier)
          (any_identifier)
          (any_identifier))))))

========================
Slice with automation declaring reads after on
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      automation SendEmail {
        on OrderPlaced
        reads AvailableRoomsView
        command SendConfirmation
        target context Notifications
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (automation_definition
          (identifier)
          (any_identifier)
          (any_identifier)
          (any_identifier)
          (any_identifier))))))

========================
Slice with automation declaring on last
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      automation SendEmail {
        reads AvailableRoomsView
        command SendConfirmation
        target context Notifications
        on OrderPlaced
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (automation_definition
          (identifier)
          (any_identifier)
          (any_identifier)
          (any_identifier)
          (any_identifier))))))

========================
Slice with translation
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      translation BookingImport {
        external_system "Booking.com"
        reads BookingWebhook
        command ImportBooking
        event BookingImported {
          fields {
            id string required
          }
        }
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (translation_definition
          (identifier)
          (string)
          (any_identifier)
          (any_identifier)
          (event_definition
            (identifier)
            (fields_block
              (field_line
                (any_identifier)
                (any_identifier)
                (any_identifier)))))))))

========================
Slice with trigger containing actor and reads
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      trigger UI "Form" {
        actor Guest
        reads AvailableRoomsView
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (trigger_definition
          (identifier)
          (string)
          (any_identifier)
          (any_identifier))))))

========================
Slice with fields block including modifiers
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      fields {
        name string required
        age int optional
        email string
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (fields_block
          (field_line
            (any_identifier)
            (any_identifier)
            (any_identifier))
          (field_line
            (any_identifier)
            (any_identifier)
            (any_identifier))
          (field_line
            (any_identifier)
            (any_identifier)))))))

========================
Slice with multiple flow entries
========================

context "C" {
  aggregate "A" {
    slice "Core" {
      flow {
        command -> event: CreateOrder -> OrderCreated
        command -> event: CancelOrder -> OrderCancelled
      }
    }
  }
}

---

(source_file
  (context_definition
    (string)
    (aggregate_definition
      (string)
      (slice_definition
        (string)
        (flow_definition
          (identifier)
          (identifier)
          (identifier)
          (identifier))))))
